css/main.css
body {
    overflow: hidden;
    padding: 0px;
    margin: 0px;
    color: #fff;
    background-color: #000;
}

a {
    color: #d00;
    text-decoration: none;
    font-weight: bold;
}

a:hover {
    color: #fff;
    text-decoration: underline;
}

div#hud > div.hud-panel {
    position: absolute;
    padding: 5px;
}

div#hud > div.hud-panel.top-left {
    top: 0px;
    left: 0px;
    text-align: left;
}

div#hud > div.hud-panel.top-right {
    top: 0px;
    right: 0px;
    text-align: right;
}

div#hud > div.hud-panel.bottom-left {
    bottom: 0px;
    left: 0px;
    text-align: left;
}

div#hud > div.hud-panel.bottom-right {
    bottom: 0px;
    right: 0px;
    text-align: right;
}

div#loading-container {
    position: absolute;
    margin: auto;
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    width: 25%;
    height: 25%;
    text-align: center;
    display: none;
}

